--- a/src/frames/Pembelian.form
+++ b/src/frames/Pembelian.form
@@ -653,6 +653,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Selesai"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSelesaiActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="txtBayar">
           <Events>
